--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "7.8.4",
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
+    "axios-mock-adapter": "1.18.1",
     "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
     "enzyme": "^3.11.0",
@@ -31,6 +32,7 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "leaflet": "^1.6.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
@@ -40,6 +42,7 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   }
 }
